<resources>
    <string name="app_name">pocketupDM</string>
    <string name="tv_login_register">¿No tienes cuenta? <u>Regístrate aquí</u></string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="register">Registro</string>
    <string name="name">Nombre</string>
    <string name="bt_register">Registrarse</string>
    <string name="tv_register_login">¿Ya tienes cuenta? <u>Inicia sesión</u></string>
    <string name="sing_in">Ingresar</string>
    <string name="sing_out">CERRAR SESIÓN</string>
    <string name="create_account">Crear cuenta</string>
    <string name="remember_user">Recordar usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Main">Inicio</string>
    <string name="grafics">Graficas</string>
    <string name="Character">Personaje</string>
    <string name="notes">Notas</string>
    <string name="Settings">Ajustes</string>
    <string name="delete_account">Eliminar Cuenta</string>
    <string name="edit_name">Editar nombre</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="confirmation_message">Mensaje de confirmación</string>
    <string name="tittle_message">Título</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="loading_name">Cargando nombre...</string>
    <string name="loading">Cargando</string>
    <string name="new_name">Ingresa el nuevo nombre</string>
    <string name="country">País</string>
    <string name="language">Idioma</string>
    <string name="coin">Moneda</string>
    <string name="theme">Tema</string>
    <string name="select_your_currency">Selecciona tu Moneda</string>
    <string name="Euro">Euro (EUR)</string>
    <string name="euro_symbol">€</string>
    <string name="dolar">Dólar (USD)</string>
    <string name="dolar_symbol">$</string>
    <string name="cop">Peso Colombiano (COP)</string>
    <string name="cop_symbol">COP</string>
    <string name="manage_money">Gestionar</string>
    <string name="que_deseas_hacer">¿Qué deseas hacer?</string>
    <string name="new_ingreso">Nuevo Ingreso</string>
    <string name="new_spent">Nuevo Gasto</string>
    <string name="see_history">Ver historial de Ingresos</string>
    <string name="see_history_movements">Ver historial de Gastos</string>
    <string name="history">Historial</string>
    <string name="incomes">Ingresos</string>
    <string name="spents">Gastos</string>
    <string name="new_movement">Registrar Movimiento</string>
    <string name="example_import">Importe (Ej: 50.00)</string>
    <string name="date">Fecha</string>
    <string name="note_optional">Nota (Opcional)</string>
    <string name="save_movement">Guardar Movimiento</string>
    <string name="new_category">Nueva Categoría</string>
    <string name="example_category">Nombre (ej. Mascotas, Gimnasio)</string>
    <string name="select_color">Elige un Color</string>
    <string name="select_icon">Elige un Icono</string>
    <string name="create_category">Crear Categoría</string>
    <string name="planifica">Planifica</string>
    <string name="goal_completed">¡Meta Completada! 🏆</string>
    <string name="goal_description">Has logrado tu objetivo: </string>


</resources>