<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle_message"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/confirmation_message"
            android:textColor="@color/black_pu"
            android:textSize="16sp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel"
                android:maxLines="1"
                app:cornerRadius="10dp"
                app:backgroundTint="@color/red"

                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_action"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/confirm"
                android:maxLines="1"
                app:cornerRadius="10dp"
                app:backgroundTint="@color/turquesa_oscuro"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"
                />

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>